Fix row of cards with heading + paragraph row gap and aligment

--- a/src/scss/framework/_mixins/foundation/gap/_gap.scss
+++ b/src/scss/framework/_mixins/foundation/gap/_gap.scss
@@ -18,3 +18,7 @@
     }
 }
 
+@mixin make-gap-d {
+    row-gap: $measure*6; //Always 3rem
+}
+
